--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -5,6 +5,8 @@ jobs:
     job1:
         runs-on: ubuntu-latest
         steps:
-            - name: "step 1"
-              run: "echo 42"
+            - name: step 1
+              run: echo 42
+            - name: step 2
+              run: ls -a -l
     
