--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "type": "module",
   "main": "src/app.js",
   "scripts": {
-    "start": "node --env-file=.env ."
+    "start": "node --env-file=.env .",
+    "test": "jest"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "jest": "^30.2.0"
   }
 }
