--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -7,6 +7,9 @@ jobs:
         steps:
             - name: step 1
               run: echo 42
+            
+            - name: Checkout
+              uses: actions/checkout@v6.0.0
             - name: step 2
               run: ls -a -l
     
