--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "src/app.js",
   "scripts": {
     "start": "node --env-file=.env .",
-    "test": "jest"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "dependencies": {
     "express": "^5.1.0",
