--- a/.github/workflows/buildTestAndDeploy.yaml
+++ b/.github/workflows/buildTestAndDeploy.yaml
@@ -11,6 +11,9 @@ jobs:
 
             - name: Setup Node 22
               uses: actions/setup-node@v6.0.0
+
+            - name: Install
+              run: npm i
             
             - name: Test
               id: Test
