--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "main": "src/app.js",
   "scripts": {
     "start": "node --env-file=.env .",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "test-ci": "node --experimental-vm-modules node_modules/jest/bin/jest.js --ci --runInBand"
   },
   "dependencies": {
     "express": "^5.1.0",
