--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "main": "src/app.js",
   "scripts": {
-    "start": "node --env-file=.env .",
+    "start": "node --env-file-if-exists=.env .",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "test-ci": "node --experimental-vm-modules node_modules/jest/bin/jest.js --ci --runInBand --forceExit"
   },
