--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -3,7 +3,7 @@ on:
 
 jobs:
     job1:
-        runs-on: ubuntu-latest
+        runs-on: self-hosted
         steps:
             - name: step 1
               run: echo 42
